# Fluxa-Ecom-

./: .env.example  .gitignore  CLAUDE.md  Inicio.py  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: settings.py
fluxa/: __init__.py  auth.py  creatives.py  db.py  imagegen.py  storyboards.py  styles.py
scripts/: analizar_producto.py  generar_reporte.py  republica_cepillo.py  run_pipeline.py
src/: video_agent.py
tests/: test_landing.py  test_triangulator.py  test_video.py  test_video_agent.py
trendia/analyzer/: __init__.py  criterios.py  motor.py  reporte_html.py
trendia/landing/: generator.py  shopify.py  templates.py
trendia/triangulator/: fb_marketplace.py  mercadolibre.py  meta_ads.py  scorer.py  trends.py
trendia/video/: fal_client.py  variations.py
